refactor: organizar diretórios e ajustar rotas

--- a/pages/TheChosen.html
+++ b/pages/TheChosen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/resenha.css">
     <title>Resenha da Série The Chosen</title>
 </head>
 <body>
@@ -12,9 +12,9 @@
             <h1>THE CHOSEN (2017)</h1>
         </header>
         <section>
-            <img class="imagem1" src="../img/theChosen.png" alt="Imagem do Série The Chosen">
-            <img class="imagem2" src="../img/theChosen2.png" alt="Imagem do Série The Chosen">
-            <img class="imagem3" src="../img/theChosen3.png" alt="Imagem do Série The Chosen">
+            <img class="imagem1" src="../assets/img/theChosen.png" alt="Imagem do Série The Chosen">
+            <img class="imagem2" src="../assets/img/theChosen2.png" alt="Imagem do Série The Chosen">
+            <img class="imagem3" src="../assets/img/theChosen3.png" alt="Imagem do Série The Chosen">
         </section>
         <section>
             <h1 class="subtitulo">RESENHA</h1>
