--- a/pages/VingadoresUltimato.html
+++ b/pages/VingadoresUltimato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/resenha.css">
     <title>Resenha do Filme Vingadores: Ultimato</title>
 </head>
 <body>
@@ -12,9 +12,9 @@
             <h1>Vingadores: Ultimato (2019)</h1>
         </div> 
         <section>
-            <img class="imagem1" src="../img/vingadoresUltimato.png" alt="Imagem do Filme Vingadores Ultimato">   
-            <img class="imagem2" src="../img/vingadores2.png" alt="Imagem do Filme Vingadores Ultimato">
-            <img class="imagem3" src="../img/vingadores3.png" alt="Imagem do Filme Vingadores Ultimato">
+            <img class="imagem1" src="../assets/img/vingadoresUltimato.png" alt="Imagem do Filme Vingadores Ultimato">   
+            <img class="imagem2" src="../assets/img/vingadores2.png" alt="Imagem do Filme Vingadores Ultimato">
+            <img class="imagem3" src="../assets/img/vingadores3.png" alt="Imagem do Filme Vingadores Ultimato">
         </section>
         <section>
             <h1 class="subtitulo">RESENHA</h1>
