refactor(Germinaflix.html, principal.css): fazer e estilizar o novo footer

--- a/Germinaflix.html
+++ b/Germinaflix.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Castoro:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/principal.css">
     <title>Germinaflix</title>
 </head>
-<body style="background-color: black; color: white; font-family: Arial;">
+<body>
     <header style="justify-content: space-around;">
         <img id="logo" src="assets/img/logo.png" alt="Logo GerminaFlix">
         <ul id="ul1">
@@ -178,8 +179,62 @@
                 </td>
             </tr>
         </table>
-        <footer>
-            Todos os direitos reservados &copy;
-        </footer>
+
     </article>
+
+    <footer>
+        <div id="div-footer">
+
+            <div id="contato" class="footer-column">
+                <h3 class="footer-title">Contato</h3>
+                <p>
+                    Tel +55 1194128-6166
+                    <br>
+                    marimarrao0115@gmail.com
+                </p>
+                <button id="contact-button">Entrar em <span class="italic-text">contato</span></button>
+            </div>
+            
+            <div class="footer-column">
+                <h3 class="footer-title">Newsletter</h3>
+                <p>Fique por dentro de todas as novidades do cinema.</p>
+                <form>
+                    <input type="text" placeholder="Digite seu nome">
+                    <input type="email" placeholder="Digite seu e-mail">
+                    <button id="newsletter-button"><span class="italic-text">Inscreva-se</span></button>
+                </form>
+            </div>
+            
+            <div id="quote" class="footer-column">
+                <h3 class="footer-title">Citação</h3>
+                <div class="quote-content">
+                    <q>
+                        A vida é como uma caixa de chocolates. Você nunca sabe o que vai encontrar.
+                    </q>
+                    <cite>Forrest Gump (1994)</cite>
+                </div>
+            </div>
+
+            <div class="footer-column">
+                <h3 class="footer-title">Links Rápidos</h3>
+                <div>
+                    <ul class="links-content">
+                        <li>
+                            <a href="#">Mais <span class="italic-text">vistos</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Recomendados</a>
+                        </li>
+                        <li>
+                            <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Sobre a <span class="italic-text">Mariana</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 </body>
