refactor(Germinaflix.hmtl, principal.css): fazer e estilizar novo header e adicionar a nova logo

--- a/Germinaflix.html
+++ b/Germinaflix.html
@@ -8,14 +8,26 @@
     <title>Germinaflix</title>
 </head>
 <body>
-    <header style="justify-content: space-around;">
-        <img id="logo" src="assets/img/logo.png" alt="Logo GerminaFlix">
-        <ul id="ul1">
-            <li><a href="#">Filmes</a></li>
-            <li><a href="#">Séries</a></li>
-            <li><a href="#">Sobre</a></li>
-        </ul>
+    <header>
+        <img id="logo" src="assets/img/logo.svg" alt="Logo Germinaflix">
+        <nav>
+            <ul id="links-header">
+                <li>
+                    <a href="#">Mais <span class="italic-text">vistos</span></a>
+                </li>
+                <li>
+                    <a href="#"><span class="italic-text">Recomendados</span></a>
+                </li>
+                <li>
+                    <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
+                </li>
+                <li>
+                    <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
     <article>
         <table style="margin-inline: auto;">
             <tr>
