refactor(deVoltaParaOFuturo.html): alterar o conteúdo do parágrafo!!

--- a/pages/deVoltaParaOFuturo.html
+++ b/pages/deVoltaParaOFuturo.html
@@ -45,10 +45,13 @@
                     </ul>
                     <hr>
                     <p>
-                        O filme Orgulho e Preconceito, dirigido por Joe Wright e baseado no livro de Jane Austen, conta a história de Elizabeth Bennet e Sr. Darcy, 
-                        que precisam superar o orgulho e os preconceitos para reconhecer o amor verdadeiro. 
-                        Ambientado na Inglaterra do século XVIII, o filme aborda temas como classe social, casamento e autoconhecimento. 
-                        Com bela fotografia e trilha sonora marcante, é uma obra que combina romance e reflexão de forma envolvente.
+                       O filme De Volta para o Futuro, dirigido por Robert Zemeckis, 
+                       é um clássico da ficção científica lançado em 1985. 
+                       A história acompanha Marty McFly, um adolescente que viaja acidentalmente para o passado em um 
+                       carro modificado pelo cientista Dr. Emmett Brown. No ano de 1955, ele encontra seus próprios 
+                       pais antes de se conhecerem e precisa garantir que eles se apaixonem para não mudar o futuro. 
+                       Com muita aventura, humor e criatividade, o filme mistura ciência e emoção, mostrando as 
+                       consequências de alterar o tempo e a importância das escolhas que moldam o destino.
                     </p>
                 </div>
             </div>
