feat(giovanna.html, mariana.html): criar as páginas de portifólio, adicionar e estilizar o header e o footer

--- a/pages/deVoltaParaOFuturo.html
+++ b/pages/deVoltaParaOFuturo.html
@@ -76,7 +76,7 @@
                     <!-- adicionar lugares -->
                 </div>
 
-                <img id="img-protagonista" src="../assets/img/personagem-De-Volta-para-o-Futuro.png">
+                <img id="img-personagem" src="../assets/img/personagem-De-Volta-para-o-Futuro.png">
             </div>
             <hr id="hr">
         </section>
