--- a/pages/orgulhoEPreconceito.html
+++ b/pages/orgulhoEPreconceito.html
@@ -74,7 +74,7 @@
                     <!-- adicionar lugares -->
                 </div>
 
-                <img id="img-protagonista" src="../assets/img/personagem-Orgulho-e-Preconceito.png">
+                <img id="img-personagem" src="../assets/img/personagem-Orgulho-e-Preconceito.png">
             </div>
             <hr id="hr">
         </section>
