refactor(theChosen.html): adicionar os gêneros nos quais a série se encaixa

--- a/pages/theChosen.html
+++ b/pages/theChosen.html
@@ -40,9 +40,9 @@
 
                 <div>
                     <ul id="genero">
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Drama</li>
+                        <li>Histórico</li>
+                        <li>Religioso</li>
                     </ul>
                     <hr>
                     <p>
