refactor(página principal): trocar o filme Até o Último Homem para Sempre ao seu lado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="assets/img/logo.svg" alt="Logo Germinaflix">
+        <img id="logo" src="./assets/img/logo-germinaflix.svg" alt="Logo Germinaflix">
         <nav>
             <ul id="links-header">
                 <li>
@@ -169,9 +169,9 @@
                 </div>
 
                 <div class="filme-card">
-                    <img src="./assets/img/ateOUltimoHomem.png" alt="Até o Último Homem">
+                    <img src="./assets/img/sempreAoSeuLado.png" alt="Até o Último Homem">
                     <div class="info-filme">
-                        <p class="italic-text">Até o Último Homem</p>
+                        <p class="italic-text">Sempre ao seu lado</p>
                         <p>2016</p>
                     </div>
                     
@@ -182,7 +182,7 @@
                    
                     <div class="links-filme">
                         <a class="saiba-mais" href="./pages/sempreAoSeuLado.html">Saiba <span class="italic-text">mais</span></a>
-                        <a class="ver-trailer" href="https://www.imdb.com/pt/title/tt2119532/?ref_=fn_all_ttl_1" target="_blank">Ver o trailer</a>
+                        <a class="ver-trailer" href="https://www.imdb.com/pt/title/tt1028532/?ref_=fn_all_ttl_1" target="_blank">Ver o trailer</a>
                     </div>
                 </div>
 
