--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="./assets/img/logo-germinaflix.svg" alt="Logo Germinaflix">
+        <img id="logo" src="./assets/img/logo-germinaflix.png" alt="Logo Germinaflix">
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
@@ -37,7 +37,7 @@
         <section id="hero">
             <img id="rolo-filmes" src="./assets/img/roloDeFilmes.png" alt="Rolo de Filmes">
             <div id="frase-hero">
-                <h1 id="titulo-hero" class="italic-text">Germinaflix</h1>
+                <h1 id="titulo-hero" class="italic-text">Vintageflix</h1>
                 <p>O seu site com as melhores resenhas de filmes e séries.</p>
             </div>
             
