--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="./assets/img/logo-germinaflix.png" alt="Logo Germinaflix">
+        <img id="logo-modo-claro" src="./assets/img/logo-germinaflix-claro.png" alt="Logo Germinaflix - Modo Claro">
+        <img id="logo-modo-escuro" src="./assets/img/logo-germinaflix-escuro.png" alt="Logo Germinaflix - Modo Escuro">
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
@@ -29,6 +30,9 @@
                 </li>
                 <li>
                     <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
+                </li>
+                <li>
+                    <img src="./assets/img/modo-escuro-icone.png" alt="Ícone do modo escuro">
                 </li>
             </ul>
         </nav>
