refactor(pages, img): adicionar a logo das plataformas de filmes em cada página de resenha

--- a/pages/diarioDeUmaPaixao.html
+++ b/pages/diarioDeUmaPaixao.html
@@ -73,14 +73,25 @@
 
                 <div id="assistir">
                     <h2>Onde assistir?</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li><img src="../assets/img/logo-Hbo-Max.svg"></li>
+                        <li><img src="../assets/img/logo-Prime-Video.svg"></li>
+                        <li><img src="../assets/img/logo-Apple-Tv.svg"></li>
+                    </ul>
                 </div>
 
                 <div id="classificacoes">
                     <h2>Classificações</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li>
+                            <img src="../assets/img/logo-Adoro-Cinema.svg">
+                            <p>4,6/5</p>
+                        </li>
+                        <li>
+                            <img src="../assets/img/logo-imdb.svg">
+                            <p>7,8/10</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <img id="img-personagem" src="../assets/img/personagem-Diario-de-Uma-Paixao.png">
