--- a/pages/sempreAoSeuLado.html
+++ b/pages/sempreAoSeuLado.html
@@ -71,17 +71,28 @@
                     <img id="rating-img" src="../assets/img/rating-35.png">
                 </div>
 
-
                 <div id="assistir">
                     <h2>Onde assistir?</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li><img src="../assets/img/logo-Paramount.svg"></li>
+                        <li><img src="../assets/img/logo-Prime-Video.svg"></li>
+                        <li><img src="../assets/img/logo-Tele-Cine.svg"></li>
+                        <li><img src="../assets/img/logo-Globo-Play.svg"></li>
+                    </ul>
                 </div>
 
                 <div id="classificacoes">
                     <h2>Classificações</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li>
+                            <img src="../assets/img/logo-Adoro-Cinema.svg">
+                            <p>4,6/5</p>
+                        </li>
+                        <li>
+                            <img src="../assets/img/logo-imdb.svg">
+                            <p>8,1/10</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <img id="img-personagem" src="../assets/img/personagem-Sempre-ao-Seu-Lado.png">
