--- a/pages/orgulhoEPreconceito.html
+++ b/pages/orgulhoEPreconceito.html
@@ -71,14 +71,25 @@
 
                 <div id="assistir">
                     <h2>Onde assistir?</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li><img src="../assets/img/logo-Tele-Cine.svg"></li>
+                        <li><img src="../assets/img/logo-Prime-Video.svg"></li>
+                        <li><img src="../assets/img/logo-Apple-Tv.svg"></li>
+                    </ul>
                 </div>
 
                 <div id="classificacoes">
                     <h2>Classificações</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li>
+                            <img src="../assets/img/logo-Adoro-Cinema.svg">
+                            <p>4,5/5</p>
+                        </li>
+                        <li>
+                            <img src="../assets/img/logo-imdb.svg">
+                            <p>7,8/10</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <img id="img-personagem" src="../assets/img/personagem-Orgulho-e-Preconceito.png">
