--- a/pages/sorrisoReal.html
+++ b/pages/sorrisoReal.html
@@ -74,14 +74,25 @@
 
                 <div id="assistir">
                     <h2>Onde assistir?</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li><img src="../assets/img/logo-Globo-Play.svg"></li>
+                        <li><img src="../assets/img/logo-Prime-Video.svg"></li>
+                        <li><img src="../assets/img/logo-Tele-Cine.svg"></li>
+                    </ul>
                 </div>
 
                 <div id="classificacoes">
                     <h2>Classificações</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li>
+                            <img src="../assets/img/logo-Adoro-Cinema.svg">
+                            <p>4,1/5</p>
+                        </li>
+                        <li>
+                            <img src="../assets/img/logo-imdb.svg">
+                            <p>6,3/10</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <img id="img-personagem" src="../assets/img/personagem-Sorriso-Real.png">
