--- a/pages/theChosen.html
+++ b/pages/theChosen.html
@@ -73,14 +73,24 @@
 
                 <div id="assistir">
                     <h2>Onde assistir?</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li><img src="../assets/img/logo-Netflix.svg"></li>
+                        <li><img src="../assets/img/logo-Prime-Video.svg"></li>
+                    </ul>
                 </div>
 
                 <div id="classificacoes">
                     <h2>Classificações</h2>
-                    
-                    <!-- adicionar lugares -->
+                    <ul class="imgs-logos">
+                        <li>
+                            <img src="../assets/img/logo-Adoro-Cinema.svg">
+                            <p>4,7/5</p>
+                        </li>
+                        <li>
+                            <img src="../assets/img/logo-imdb.svg">
+                            <p>9,1/10</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <img id="img-personagem" src="../assets/img/personagem-The-Chosen.png">
