refactor(index.html, pages): alterar a logo e nome do site

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Castoro:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/principal.css">
     <link rel="stylesheet" href="assets/css/global.css">
-    <title>Germinaflix</title>
+    <title>Vintageflix</title>
 </head>
 <body>
     <header>
-        <img id="logo" src="./assets/img/logo-germinaflix.svg" alt="Logo Germinaflix">
+        <img id="logo" src="assets/img/logo-Vintageflix.svg" alt="Logo Vintageflix">
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
@@ -38,7 +38,7 @@
         <section id="hero">
             <img id="rolo-filmes" src="./assets/img/roloDeFilmes.png" alt="Rolo de Filmes">
             <div id="frase-hero">
-                <h1 id="titulo-hero" class="italic-text">Germinaflix</h1>
+                <h1 id="titulo-hero" class="italic-text">Vintageflix</h1>
                 <p>O seu site com as melhores resenhas de filmes e séries.</p>
             </div>
             
