--- a/pages/sorrisoReal.html
+++ b/pages/sorrisoReal.html
@@ -11,7 +11,7 @@
 <body>
     
     <header>
-        <img id="logo" src="./assets/img/logo-germinaflix.svg" alt="Logo Germinaflix">
+        <img id="logo" src="../assets/img/logo-Vintageflix.svg" alt="Logo Vintageflix">
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
