feat(página principal): adicionar hover nos botões de saiba mais

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <img id="logo-modo-claro" src="./assets/img/logo-germinaflix-claro.png" alt="Logo Germinaflix - Modo Claro">
-        <img id="logo-modo-escuro" src="./assets/img/logo-germinaflix-escuro.png" alt="Logo Germinaflix - Modo Escuro">
+        <img id="logo" src="./assets/img/logo-Vintageflix.png" alt="Logo Vintageflix">
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
@@ -31,9 +30,6 @@
                 </li>
                 <li>
                     <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
-                </li>
-                <li>
-                    <img src="./assets/img/modo-escuro-icone.png" alt="Ícone do modo escuro">
                 </li>
             </ul>
         </nav>
