refactor(footer e header): mudar links -mais-vistos e -recomendados para home

--- a/pages/orgulhoEPreconceito.html
+++ b/pages/orgulhoEPreconceito.html
@@ -11,7 +11,9 @@
 <body>
     
     <header>
-        <img id="logo" src="../assets/img/logo-Vintageflix.svg" alt="Logo Vintageflix">
+        <a href="../index.html">
+            <img id="logo" src="../assets/img/logo-Vintageflix.svg" alt="Logo Germinaflix">
+        </a>
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
@@ -21,10 +23,7 @@
         <nav class="menu">
             <ul id="links-header">
                 <li>
-                    <a href="#mais-vistos">Mais <span class="italic-text">vistos</span></a>
-                </li>
-                <li>
-                    <a href="#recomendados"><span class="italic-text">Recomendados</span></a>
+                    <a href="../index.html" class="italic-text">Home</a>
                 </li>
                 <li>
                     <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
@@ -111,7 +110,6 @@
 
     </main>
 
-
     <footer>
         <div id="div-footer">
             <div id="contato" class="footer-column">
@@ -149,10 +147,7 @@
                 <div>
                     <ul class="links-content">
                         <li>
-                            <a href="#">Mais <span class="italic-text">vistos</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Recomendados</a>
+                            <a href="../index.html" class="italic-text">Home</a>
                         </li>
                         <li>
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
