--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="./assets/img/logo-Vintageflix.svg" alt="Logo Germinaflix">
+        <a href="#hero">
+            <img id="logo" src="./assets/img/logo-Vintageflix.svg" alt="Logo Germinaflix">
+        </a>
         <input type="checkbox" id="menu-hamburguer"/>
         <label for="menu-hamburguer" class="menu-btn">
             <span></span>
@@ -20,10 +22,7 @@
         <nav class="menu">
             <ul id="links-header">
                 <li>
-                    <a href="#mais-vistos">Mais <span class="italic-text">vistos</span></a>
-                </li>
-                <li>
-                    <a href="#recomendados"><span class="italic-text">Recomendados</span></a>
+                    <a href="#hero" class="italic-text">Home</a>
                 </li>
                 <li>
                     <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
@@ -270,10 +269,7 @@
                 <div>
                     <ul class="links-content">
                         <li>
-                            <a href="#">Mais <span class="italic-text">vistos</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Recomendados</a>
+                            <a href="#hero" class="italic-text">Home</a>
                         </li>
                         <li>
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
