refactor(footer e header): redirecionar links para a página pessoal

--- a/pages/deVoltaParaOFuturo.html
+++ b/pages/deVoltaParaOFuturo.html
@@ -26,7 +26,7 @@
                     <a href="../index.html" class="italic-text">Home</a>
                 </li>
                 <li>
-                    <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
+                    <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                 </li>
                 <li>
                     <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
@@ -155,7 +155,7 @@
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
                         </li>
                         <li>
-                            <a href="#">Sobre a <span class="italic-text">Mariana</span></a>
+                            <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                         </li>
                     </ul>
                 </div>
