--- a/pages/mariana.html
+++ b/pages/mariana.html
@@ -317,7 +317,7 @@
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
                         </li>
                         <li>
-                            <a href="#">Sobre a <span class="italic-text">Mariana</span></a>
+                            <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                         </li>
                     </ul>
                 </div>
