--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#hero" class="italic-text">Home</a>
                 </li>
                 <li>
-                    <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
+                    <a href="pages/mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                 </li>
                 <li>
                     <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
@@ -275,7 +275,7 @@
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
                         </li>
                         <li>
-                            <a href="#">Sobre a <span class="italic-text">Mariana</span></a>
+                            <a href="./pages/mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                         </li>
                     </ul>
                 </div>
