--- a/pages/adoraveisMulheres.html
+++ b/pages/adoraveisMulheres.html
@@ -26,7 +26,7 @@
                     <a href="../index.html" class="italic-text">Home</a>
                 </li>
                 <li>
-                    <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
+                    <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                 </li>
                 <li>
                     <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
@@ -149,16 +149,13 @@
                 <div>
                     <ul class="links-content">
                         <li>
-                            <a href="#">Mais <span class="italic-text">vistos</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Recomendados</a>
+                            <a href="../index.html" class="italic-text">Home</a>
                         </li>
                         <li>
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
                         </li>
                         <li>
-                            <a href="#">Sobre a <span class="italic-text">Mariana</span></a>
+                            <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                         </li>
                     </ul>
                 </div>
