--- a/pages/gilmoreGirls.html
+++ b/pages/gilmoreGirls.html
@@ -9,7 +9,6 @@
     <title>Saiba Mais - Gilmore Girls</title>
 </head>
 <body>
-    
     <header>
         <a href="../index.html">
             <img id="logo" src="../assets/img/logo-Vintageflix.svg" alt="Logo Germinaflix">
@@ -26,7 +25,7 @@
                     <a href="../index.html" class="italic-text">Home</a>
                 </li>
                 <li>
-                    <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
+                    <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                 </li>
                 <li>
                     <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
@@ -156,7 +155,7 @@
                             <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
                         </li>
                         <li>
-                            <a href="#">Sobre a <span class="italic-text">Mariana</span></a>
+                            <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                         </li>
                     </ul>
                 </div>
