feat(giovanna.html): criar página de sobre

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="pages/mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                 </li>
                 <li>
-                    <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
+                    <a href="pages/giovanna.html">Sobre a <span class="italic-text">Giovanna</span></a>
                 </li>
             </ul>
         </nav>
