--- a/pages/mariana.html
+++ b/pages/mariana.html
@@ -26,10 +26,10 @@
                     <a href="../index.html" class="italic-text">Home</a>
                 </li>
                 <li>
-                    <a href="mariPortifolio.html">Sobre a <span class="italic-text">Mariana</span></a>
+                    <a href="./mariana.html">Sobre a <span class="italic-text">Mariana</span></a>
                 </li>
                 <li>
-                    <a href="#">Sobre a <span class="italic-text">Giovanna</span></a>
+                    <a href="./giovanna.html">Sobre a <span class="italic-text">Giovanna</span></a>
                 </li>
             </ul>
         </nav>
