refactor: fazer pequenas alterações em algumas partes d site

--- a/pages/mariana.html
+++ b/pages/mariana.html
@@ -268,7 +268,7 @@
                 <div class="destino">
                     <img class="pais-imagem" src="../assets/img/grecia.png" alt="cia">
                     <img class="papel" src="../assets/img/papel.png" alt="Papel">
-                    <p class="nome-pais">Espanha</p>
+                    <p class="nome-pais">Grécia</p>
                 </div>
             </div>
         </section>
