refactor(giovanna.html): wip - adicionar minhas curiosidades

--- a/pages/giovanna.html
+++ b/pages/giovanna.html
@@ -38,14 +38,14 @@
     <main>
         <section id="hero">
             <img id="estrelas" src="../assets/img/estrelas.png" alt="Estrelas">
-            <p id="mari">gigi's</p>
+            <p id="mari">Gigi's</p>
             <p id="portfolio">port<span class="italic-text">fólio</span></p>
             <img id="coracoes" src="../assets/img/coracao.png" alt="Corações">
         </section>
 
         <section id="sobre-mim">
             <div>
-                <img src="../assets/img/colagem-giovanna.png" alt="Colagem">
+                <img src="../assets/img/colagem-giovanna.png" alt="CColagem">
             </div>
             <div>
                 <p id="sobre-mim-titulo">Sobre <span class="italic-text">mim</span></p>
@@ -68,11 +68,11 @@
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="bolo" src="../assets/img/bolo.png" alt="Bolo">
+                            <img id="modelo" src="../assets/img/modelo.png" alt="Passarela">
                             <p>1</p>
                         </div>
                         <div class="card-verso">
-                            <p>Eu como a sobremesa antes da comida.</p>
+                            <p>Eu já fui modelo e desfilei em uma passarela aos 4 anos.</p>
                         </div>
                     </div>
                 </div>
@@ -80,11 +80,11 @@
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="biblia" src="../assets/img/biblia.png" alt="Bíblia">
+                            <img id="barbie" src="../assets/img/barbie.png" alt="Filme A Princesa e a Pop Star">
                             <p>2</p>
                         </div>
                         <div class="card-verso">
-                            <p>Eu já li a Bíblia toda.</p>
+                            <p>Sou apaixonada pelos filmes da Barbie, especialmente por A Princesa & a Pop Star.</p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                             <p>3</p>
                         </div>
                         <div class="card-verso">
-                            <p>Tenho aflição de passar a mão em tecidos.</p>
+                            <p>Apesar de estranho, amo azeitonas!</p>
                         </div>
                     </div>
                 </div>
@@ -104,11 +104,11 @@
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="numero-de-pi" src="../assets/img/numero-de-pi.png" alt="Número de Pi">
+                            <img id="presente" src="../assets/img/presente.png" alt="Presente">
                             <p>4</p>
                         </div>
                         <div class="card-verso">
-                            <p>A senha do meu celular já foi os 6 primeiros dígitos de π.</p>
+                            <p>Adoro itens de papelaria e fazer presentes à mão.</p>
                         </div>
                     </div>
                 </div>
@@ -116,50 +116,15 @@
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="tic-tac" src="../assets/img/tic-tac.png" alt="TicTac">
+                            <img id="telescopio" src="../assets/img/tic-tac.png" alt="TicTac">
                             <p>5</p>
                         </div>
                         <div class="card-verso">
-                            <p>Tenho uma coleção de caixinhas de TicTac.</p>
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="card-curiosidade">
-                    <div class="card-interno">
-                        <div class="card-frente">
-                            <img id="dicionario" src="../assets/img/dicionario.png" alt="Dicionário">
-                            <p>6</p>
-                        </div>
-                        <div class="card-verso">
-                            <p>Pedi um dicionário de presente de Natal com seis anos.</p>
+                            <p>Quando eu era mais nova, sonhava em ser uma astrônoma.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="card-curiosidade">
-                    <div class="card-interno">
-                        <div class="card-frente">
-                            <img id="pimenta" src="../assets/img/pimenta.png" alt="Pimenta">
-                            <p>7</p>
-                        </div>
-                        <div class="card-verso">
-                            <p>Gosto muito de pimenta.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-curiosidade">
-                    <div class="card-interno">
-                        <div class="card-frente">
-                            <img id="diario" src="../assets/img/diario.png" alt="Pimenta">
-                            <p>8</p>
-                        </div>
-                        <div class="card-verso">
-                            <p>Amo escrever no meu diário.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section> 
         
@@ -168,9 +133,9 @@
             <p class="descricao-section">Arraste para ver mais</p>
             <div id="lugares-que-conheci">
                 <div class="lugar">
-                    <img class="lugar-imagem" src="../assets/img/pico-do-jaragua.png" alt="Pico do Jaraguá">
+                    <img class="lugar-imagem" src="../assets/img/alagoas.png" alt="Alagoas">
                     <img class="flor-com-fita" src="../assets/img/flor-com-fita.png" alt="Flor com fita">
-                    <p class="nome-lugar">Pico do Jaraguá - SP</p>
+                    <p class="nome-lugar">Alagoas - AL</p>
                 </div>
                 <div class="lugar">
                     <img class="lugar-imagem" src="../assets/img/hopi-hari.png" alt="Hopi Hari">
@@ -178,20 +143,21 @@
                     <p class="nome-lugar">Hopi Hari - SP</p>
                 </div>
                 <div class="lugar">
-                    <img class="lugar-imagem" src="../assets/img/alagoas.png" alt="Alagoas">
+                    <img class="lugar-imagem" src="../assets/img/parque-da-cidade-jundiai.png" alt="Parque da Cidade Jundiaí">
                     <img class="flor-com-fita" src="../assets/img/flor-com-fita.png" alt="Flor com fita">
-                    <p class="nome-lugar">Alagoas - AL</p>
+                    <p class="nome-lugar">Parque da Cidade Jundiaí- SP</p>
+                </div>
+                <div class="lugar">
+                    <img class="lugar-imagem" src="../assets/img/pico-do-jaragua.png" alt="Pico do Jaraguá">
+                    <img class="flor-com-fita" src="../assets/img/flor-com-fita.png" alt="Flor com fita">
+                    <p class="nome-lugar">Pico do Jaraguá - SP</p>
                 </div>
                 <div class="lugar">
                     <img class="lugar-imagem" src="../assets/img/itu.png" alt="Itu">
                     <img class="flor-com-fita" src="../assets/img/flor-com-fita.png" alt="Flor com fita">
                     <p class="nome-lugar">Itu - SP</p>
                 </div>
-                <div class="lugar">
-                    <img class="lugar-imagem" src="../assets/img/parque-da-cidade-jundiai.png" alt="Parque da Cidade Jundiaí">
-                    <img class="flor-com-fita" src="../assets/img/flor-com-fita.png" alt="Flor com fita">
-                    <p class="nome-lugar">Parque da Cidade Jundiaí - SP</p>
-                </div>
+            </div>
         </section>
 
         <section id="proximos-destinos-section">
@@ -199,19 +165,44 @@
             <p class="descricao-section">Arraste para ver mais</p>
             <div id="proximos-destinos">
                 <div class="destino">
-                    <img class="pais-imagem" src="../assets/img/italia.png" alt="Itália">
+                    <img class="pais-imagem" src="../assets/img/australia.png" alt="Austrália">
                     <img class="papel" src="../assets/img/papel.png" alt="Papel">
-                    <p class="nome-pais">Itália</p>
+                    <p class="nome-pais">Austrália</p>
                 </div>
                 <div class="destino">
-                    <img class="pais-imagem" src="../assets/img/franca.png" alt="França">
+                    <img class="pais-imagem" src="../assets/img/caribe.png" alt="Caribe">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Caribe</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/dubai.png" alt="Dubai">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Dubai</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/egito.png" alt="Egito">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Egito</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/espanha-giovanna.png" alt="Espanha">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Espanha</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/estados-unidos.png" alt="Estados Unidos">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Estados Unidos</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/finlandia.png" alt="Finlândia">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Finlândia</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/franca-giovanna.png" alt="França">
                     <img class="papel" src="../assets/img/papel.png" alt="Papel">
                     <p class="nome-pais">França</p>
-                </div>
-                <div class="destino">
-                    <img class="pais-imagem" src="../assets/img/inglaterra.png" alt="inglaterra">
-                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
-                    <p class="nome-pais">Inglaterra</p>
                 </div>
                 <div class="destino">
                     <img class="pais-imagem" src="../assets/img/grecia.png" alt="Grécia">
@@ -219,14 +210,39 @@
                     <p class="nome-pais">Grécia</p>
                 </div>
                 <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/havai.png" alt="Havaí">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Havaí</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/inglaterra-giovanna.png" alt="inglaterra">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Inglaterra</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/italia-giovanna.png" alt="Itália">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Itália</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/mexico.png" alt="México">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">México</p>
+                </div>
+                <div class="destino">
                     <img class="pais-imagem" src="../assets/img/nova-zelandia.png" alt="Nova Zelândia">
                     <img class="papel" src="../assets/img/papel.png" alt="Papel">
                     <p class="nome-pais">Nova Zelândia</p>
                 </div>
                 <div class="destino">
-                    <img class="pais-imagem" src="../assets/img/grecia.png" alt="cia">
+                    <img class="pais-imagem" src="../assets/img/noruega.png" alt="Noruega">
                     <img class="papel" src="../assets/img/papel.png" alt="Papel">
-                    <p class="nome-pais">Espanha</p>
+                    <p class="nome-pais">Noruega</p>
+                </div>
+                <div class="destino">
+                    <img class="pais-imagem" src="../assets/img/suica.png" alt="Suiça">
+                    <img class="papel" src="../assets/img/papel.png" alt="Papel">
+                    <p class="nome-pais">Suiça</p>
                 </div>
             </div>
         </section>
